Limit initial release to eight operators